[package]
name = "cso_db_rust"
version = "3.0.0"
edition = "2021"
authors = ["Antigravity"]
description = "Arma 3 Extension for SQLite Database (Rust Port)"

[lib]
crate-type = ["cdylib"]
name = "TBD_DB_x64"

[dependencies]
arma-rs = "1.11.2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
lazy_static = "1.4.0"
parking_lot = "0.12.1"
serde_json = "1.0"


[dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
]

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
